<resources>
    <string name="app_name">Filmistan</string>
    <string name="loginBackgroundImage">logInbackground</string>
    <string name="Sign_In">Sign In</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">#SignUp</string>
    <string name="privacy">Privacy</string>
    <string name="explore">explore</string>
    <string name="i_agree_to_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="confirm_passowrd">Confirm Passowrd</string>
    <string name="tap">TAP</string>
    <string name="forgot_username_or_id">Forgot username or id?</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_user_profile">user_profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_form">FeedBack Form</string>
    <string name="name">Name</string>
    <string name="reviews">Reviews</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="played">Played</string>
    <string name="view">View</string>
    <string name="todo">TODO</string>
    <string name="overview">Overview</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="vote_average">Vote Average</string>
    <string name="total_votes">Total Votes</string>
    <string name="popularity">Popularity</string>
    <string name="details">Details</string>
    <string name="releasedate">Release Date</string>
    <string name="duration">Duration</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="MEmailAddress">Enter Email Address</string>
    <string name="MEmailandPassword">Please Enter Email address and Passowrd</string>
    <string name="MDetail">Enter Detials correctly</string>
</resources>
