<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/loginbackground">

    <data>
        <variable
            name="logIn"
            type="com.banjara.dixitjain.filmistan.views.signin.SignIn"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.banjara.dixitjain.filmistan.views.signin.SignIn">


        <android.support.v7.widget.CardView
            android:id="@+id/logInCardView"
            android:layout_width="0dp"
            android:layout_height="293dp"
            android:layout_marginBottom="132dp"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="58dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@android:drawable/ic_dialog_email"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="108dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@android:drawable/ic_lock_lock"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/sigInButton"
                    android:layout_width="295dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="67dp"
                    android:textColor="#fff"
                    android:background="@drawable/corner_buttom"
                    android:onClickListener="@{logIn::onSignInClick}"
                    android:text="@string/Sign_In" />

                <TextView
                    android:id="@+id/forgotPassowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/signUptext"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onResetClick"
                    android:text="@string/forgot_username_or_id"
                    android:textAlignment="center"
                    android:textColor="#68D6E5"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signUptext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{logIn::onSignUpClick}"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#68D6E5"
                    android:textSize="16sp" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <CheckBox
            android:id="@+id/termsBox"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/i_agree_to_terms_and_conditions"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="italic"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="232dp"
            android:layout_height="0dp"
            android:layout_marginBottom="11dp"
            android:fontFamily="sans-serif"
            android:text="@string/terms_and_condition"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="italic"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>