<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/loginbackground"
    >
    <data>
        <variable
            name="signUp"
            type="com.banjara.dixitjain.filmistan.views.signin.SignUp"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.banjara.dixitjain.filmistan.views.signin.SignUp">


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="308dp"
            android:layout_height="338dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintVertical_bias="1.0">

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="65dp"
                    android:background="#FFF"
                    android:drawablePadding="10dp"
                    android:drawableStart="@android:drawable/ic_dialog_email"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="179dp" />

                <EditText
                    android:id="@+id/passwordText"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="125dp"
                    android:background="#FFF"
                    android:drawablePadding="10dp"
                    android:drawableStart="@android:drawable/ic_lock_lock"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="219dp" />

                <EditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="107dp"
                    android:background="#FFF"
                    android:drawablePadding="10dp"
                    android:drawableStart="@android:drawable/ic_lock_lock"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:hint="@string/confirm_passowrd"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:typeface="sans"
                    tools:layout_editor_absoluteY="259dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="39dp"
                    android:background="@drawable/corner_buttom"
                    android:onClickListener="@{signUp::onSignUpClick}"
                    android:text="@string/sign_up"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="325dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#68D6E5" />

                <TextView
                    android:id="@+id/signIntext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/Sign_In"
                    android:textAlignment="center"
                    android:onClick="@{signUp::onSignInClick}"
                    android:textColor="#68D6E5"
                    android:textSize="16sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>
